--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,7 @@
 
 :root {
   --primary: #243887;
-  --secondary: #2c6e49;
+  --secondary: #25f8e8;
   --cta-bg: var(--primary);
   --cta-text: black;
 }
@@ -14,13 +14,12 @@
   top: 0;
   left: 0;
   right: 0;
-  z-index: 100;
-  background: #243887;
   box-shadow: 0 2px 28px 0 rgba(0,0,0,0.06);
 }
 
 .container {
   width: 95%;
+  margin: 0 auto;
 }
 
 body {
